--- a/BikerStorm.WebAssembly/_Imports.razor
+++ b/BikerStorm.WebAssembly/_Imports.razor
@@ -8,3 +8,10 @@
 @using Microsoft.JSInterop
 @using BikerStorm.WebAssembly
 @using BikerStorm.WebAssembly.Shared
+
+@using Blazored.LocalStorage;
+
+@using Blazored.Toast;
+@using Blazored.Toast.Services;
+
+@using CurrieTechnologies.Razor.SweetAlert2;
